crates/infinity-agent-cli/tests/snapshots/tui_viewport_snapshots__picker_closed_after_prints.snap
---
source: crates/infinity-agent-cli/tests/tui_viewport_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ Infinity Agent CLI
┌────────────────────────────────────────────────────────────────────────────────┐
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│scroll line 01                                                                  │
│scroll line 02                                                                  │
│scroll line 03                                                                  │
│scroll line 04                                                                  │
│info arriving while picker open 1                                               │
│info arriving while picker open 2                                               │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│/help for commands                                 mock: mock-model · 0% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=11 col=1
