crates/infinity-agent-cli/tests/snapshots/tui_viewport_snapshots__picker_open_with_prints.snap
---
source: crates/infinity-agent-cli/tests/tui_viewport_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ Infinity Agent CLI
┌────────────────────────────────────────────────────────────────────────────────┐
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│scroll line 01                                                                  │
│scroll line 02                                                                  │
│scroll line 03                                                                  │
│scroll line 04                                                                  │
│info arriving while picker open 1                                               │
│info arriving while picker open 2                                               │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│ Mock Model                 100k ctx                                            │
│ Mock Mini                   32k ctx                                            │
│                                                                                │
│↑↓ navigate  enter select  esc cancel                            0% context used│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=8 col=0 (hidden)
